slide update, add type to moneyMC output, plot_moment_fit

--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -96,6 +96,21 @@
 
 \begin_layout Title
 Regional Shocks, Migration and Homeownership
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+I would like to thank Costas Meghir, Lars Nesheim and Mariacristina De Nardi
+ for their continued support and advice throughout this project.
+ I also thank Uta Schönberg, Jeremy Lise, Marco Bassetto, Suphanit Piyapromdee,
+ Richard Blundell and seminar participants at UCL, IFS and Royal Holloway
+ for comments and suggestions.
+ Finally, I would like to acknowledge financial support from cemmap.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Author
@@ -110,7 +125,7 @@ status collapsed
 
 \begin_layout Plain Layout
 
-f.oswald@ucl.ac.uk
+florian.oswald@gmail.com
 \end_layout
 
 \end_inset
